-
Bug
-
Resolution: Fixed
-
P1: Critical
-
3.1.0 (rev.02)
-
Windows 11 23H2
MSVC2022
Qt 6.2.4, Qt 6.6.1, Qt 6.6.2
-
e5a06c482 (dev), 899d3e090 (dev)
This refers to version 3.1.0.44, which is not listed in Jira.
- Create a new Qt Quick Application project.
Qt Visual Studio Project, not CMake-based. - Try building it using "Build" -> "Build Solution" from the menu.
Building will fail:Severity Code Description Project File Line Suppression State Details Error C4996 'Qt::AA_EnableHighDpiScaling': High-DPI scaling is always enabled. This attribute no longer has any effect. QtQuickApplication53 D:\tmp\msvs\QtQuickApplication53\QtQuickApplication53\main.cpp 7
Found while extending Squish test tst_new_project_file_creation.