Prevent deprecation warning / error in Qt quick application template

Prevent C4996: 'Qt::AA_EnableHighDpiScaling': High-DPI scaling is always
enabled. This attribute no longer has any effect.

Fixes: QTVSADDINBUG-1178
Change-Id: I1d2d308662a63d6b4348f6bdec8f747fc731d6c5
Reviewed-by: Karsten Heimrich <karsten.heimrich@qt.io>